--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <ul id="wishList"></ul>
     </div>
 
-    <script src="13.1. My Wishlist - UPDATED.js"> </script>
+    <script src="My Wishlist.js"> </script>
 </body>
 
 </html>
